--- a/WorkerService/WorkerService.csproj
+++ b/WorkerService/WorkerService.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D58DDEAB-B2DE-408D-A85C-59EF26C84E50}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TestLib.WorkerService</RootNamespace>
-    <AssemblyName>TestLib.WorkerService</AssemblyName>
+    <RootNamespace>WorkerService</RootNamespace>
+    <AssemblyName>WorkerService</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
