--- a/WorkerUpdater/WorkerUpdater.csproj
+++ b/WorkerUpdater/WorkerUpdater.csproj
@@ -6,11 +6,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{80A1A18B-5CC4-4490-A93D-DB66343EDDB8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TestLib.Worker.Updater</RootNamespace>
-    <AssemblyName>TestLib.Worker.Updater</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>WorkerUpdater</RootNamespace>
+    <AssemblyName>WorkerUpdater</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
